k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      component: backend
  template:
    metadata:
      labels:
        component: backend
    spec:
      containers:
        - name: backend
          image: muhammadrivaldy05/basic-k8s
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
---

apiVersion: v1
kind: Service
metadata:
  name: service-backend
spec:
  type: ClusterIP
  selector:
    component: backend
  ports:
    - port: 8080
      targetPort: 8080
